# Projekt_Gra_Turowa

./: Battle.cpp  Battle.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  README.md  main.cpp
Frogs/: BaseFrog.cpp  BaseFrog.hpp  FrogsWithType.cpp  FrogsWithType.hpp
Frogs/Components/: BaseDefensiveSpecialAttack.cpp  BaseDefensiveSpecialAttack.hpp  BaseOffensiveSpecialAttack.cpp  BaseOffensiveSpecialAttack.hpp  BaseSpecialAttack.cpp  BaseSpecialAttack.hpp  DefensiveSpecialAttack.cpp  DefensiveSpecialAttack.hpp  OffensiveSpecialAttack.cpp  OffensiveSpecialAttack.hpp  damageMultiplier.cpp  damageMultiplier.hpp
Frogs/Components/Based/: BaseFrog.cpp  BaseFrog.hpp  BaseSpecialAttack.cpp  BaseSpecialAttack.hpp
Frogs/Components/Enums/: FrogType.hpp  SpecialAttackType.hpp
Functions/: Functions.cpp  Functions.hpp
